--- a/config.yaml
+++ b/config.yaml
@@ -15,16 +15,16 @@
 carpentry: 'incubator'
 
 # Alt-text description of the lesson.
-carpentry_description: 'Lesson Description'
+carpentry_description: 'Learn how to run common AI/ML procedures (train, tune, etc.) using AWS SageMaker. These examples focus on narrow "predictive ML/AI" cases, where models are trained to perform a single function (contrasing with "foundation" model use via AWS Bedrock). These materials are directed towards participants of the 2024 Machine Learning Marathon, and some instructions may pertain only to that group. A more general purpose version of this workshop will be made available in future months.'
 
 # Overall title for pages.
-title: 'Lesson Title' # FIXME
+title: 'Intro to AWS SageMaker for Common ML/AI Procedures' # FIXME
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
-created: ~ # FIXME
+created: 2024-10-31
 
 # Comma-separated list of keywords for the lesson
-keywords: 'software, data, lesson, The Carpentries' # FIXME
+keywords: 'AWS, SageMaker, Cloud Computing, Machine Learning, AI' # FIXME
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
@@ -34,13 +34,13 @@ life_cycle: 'pre-alpha' # FIXME
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/carpentries/workbench-template-md' # FIXME
+source: 'https://github.com/UW-Madison-DataScience/ml-with-aws-sagemaker'
 
 # Default branch of your lesson
 branch: 'main'
 
 # Who to contact if there are any issues
-contact: 'team@carpentries.org' # FIXME
+contact: 'endemann@wisc.edu' # FIXME
 
 # Navigation ------------------------------------------------
 #
