--- a/config.yaml
+++ b/config.yaml
@@ -34,13 +34,13 @@ life_cycle: 'pre-alpha' # FIXME
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/UW-Madison-DataScience/ml-with-aws-sagemaker'
+source: 'https://github.com/UW-Madison-DataScience/ml-with-aws-sagemaker.git'
 
 # Default branch of your lesson
 branch: 'main'
 
 # Who to contact if there are any issues
-contact: 'endemann@wisc.edu' # FIXME
+contact: 'endemann@wisc.edu' 
 
 # Navigation ------------------------------------------------
 #
