--- a/config.yaml
+++ b/config.yaml
@@ -66,7 +66,7 @@ contact: 'endemann@wisc.edu'
 
 # Order of episodes in your lesson
 episodes: 
-- introduction.md
+- 01_Data-storage-setting-up-S3.md
 
 # Information for Learners
 learners: 
