--- a/config.yaml
+++ b/config.yaml
@@ -67,6 +67,8 @@ contact: 'endemann@wisc.edu'
 # Order of episodes in your lesson
 episodes: 
 - Data-storage-setting-up-S3.md
+- SageMaker-notebooks-as-controllers.md
+- Accessing-S3-via-SageMaker-notebooks.md
 
 # Information for Learners
 learners: 
