--- a/config.yaml
+++ b/config.yaml
@@ -69,6 +69,7 @@ episodes:
 - Data-storage-setting-up-S3.md
 - SageMaker-notebooks-as-controllers.md
 - Accessing-S3-via-SageMaker-notebooks.md
+- Interacting-with-code-repo.md
 
 # Information for Learners
 learners: 
