--- a/config.yaml
+++ b/config.yaml
@@ -70,7 +70,7 @@ episodes:
 - SageMaker-notebooks-as-controllers.md
 - Accessing-S3-via-SageMaker-notebooks.md
 - Interacting-with-code-repo.md
-- Training-models-in-SageMaker-notebooks.md
+# - Training-models-in-SageMaker-notebooks.md
 
 # Information for Learners
 learners: 
