--- a/config.yaml
+++ b/config.yaml
@@ -34,7 +34,8 @@ life_cycle: 'pre-alpha' # FIXME
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/UW-Madison-DataScience/ml-with-aws-sagemaker.git'
+source: 'https://github.com/UW-Madison-DataScience/ml-with-aws-sagemaker'
+
 
 # Default branch of your lesson
 branch: 'main'
