--- a/config.yaml
+++ b/config.yaml
@@ -67,6 +67,7 @@ contact: 'endemann@wisc.edu'
 
 # Order of episodes in your lesson
 episodes: 
+- SageMaker-overview.md
 - Data-storage-setting-up-S3.md
 - SageMaker-notebooks-as-controllers.md
 - Accessing-S3-via-SageMaker-notebooks.md
