--- a/config.yaml
+++ b/config.yaml
@@ -73,6 +73,7 @@ episodes:
 - Accessing-S3-via-SageMaker-notebooks.md
 - Interacting-with-code-repo.md
 - Training-models-in-SageMaker-notebooks.md
+- Training-models-in-SageMaker-notebooks-part2.md
 
 # Information for Learners
 learners: 
