hyperparameter tuning episode

--- a/config.yaml
+++ b/config.yaml
@@ -74,6 +74,7 @@ episodes:
 - Interacting-with-code-repo.md
 - Training-models-in-SageMaker-notebooks.md
 - Training-models-in-SageMaker-notebooks-part2.md
+- Hyperparameter-tuning.md
 
 # Information for Learners
 learners: 
