--- a/config.yaml
+++ b/config.yaml
@@ -15,10 +15,10 @@
 carpentry: 'incubator'
 
 # Alt-text description of the lesson.
-carpentry_description: 'Learn how to run common AI/ML procedures (train, tune, etc.) using AWS SageMaker. These examples focus on narrow "predictive ML/AI" cases, where models are trained to perform a single function (contrasing with "foundation" model use via AWS Bedrock). These materials are directed towards participants of the 2024 Machine Learning Marathon, and some instructions may pertain only to that group. A more general purpose version of this workshop will be made available in future months.'
+carpentry_description: 'Learn how to run predictive AI/ML procedures (train, tune, etc.) using AWS SageMaker. These examples focus on narrow "predictive ML/AI" cases, where models are trained to perform a single function (contrasing with "foundation" model use via AWS Bedrock). These materials are directed towards participants of the 2024 Machine Learning Marathon, and some instructions may pertain only to that group. A more general purpose version of this workshop will be made available in future months.'
 
 # Overall title for pages.
-title: 'Intro to AWS SageMaker for Common ML/AI Procedures' # FIXME
+title: 'Intro to AWS SageMaker for Predictive ML/AI' # FIXME
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
 created: 2024-10-31
