add final resource MGMT episode

--- a/config.yaml
+++ b/config.yaml
@@ -75,6 +75,7 @@ episodes:
 - Training-models-in-SageMaker-notebooks.md
 - Training-models-in-SageMaker-notebooks-part2.md
 - Hyperparameter-tuning.md
+- Resource-management-cleanup.md
 
 # Information for Learners
 learners: 
