add learner pages

--- a/config.yaml
+++ b/config.yaml
@@ -79,8 +79,10 @@ episodes:
 
 # Information for Learners
 learners: 
+- setup.md
+- reference.md
+- instances-for-ML.md
 
-# Information for Instructors
 instructors: 
 
 # Learner Profiles
