--- a/config.yaml
+++ b/config.yaml
@@ -85,8 +85,8 @@ learners:
 
 instructors: 
 
-# # Learner Profiles
-# profiles: 
+# Learner Profiles
+profiles: 
 
 # Customisation ---------------------------------------------
 #
